--- a/index.html
+++ b/index.html
@@ -3,70 +3,68 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kaneshiro Attack Tools</title>
+  <title>Shadow Crasher - By RyuuTempest</title>
   <style>
     body {
       background-color: #000;
       color: #00ff00;
       font-family: 'Courier New', monospace;
-      background-image: url('https://files.catbox.moe/7t0q69.jpg'); /* Link gambar Kaneshiro */
-      background-size: cover;
+      background-image: url('https://files.catbox.moe/6c41es.jpg'); /* Gambar baru Kaneshiro */
+      background-size: cover; /* biar full layar */
       background-repeat: no-repeat;
       background-position: center;
       background-attachment: fixed;
-      backdrop-filter: brightness(0.5);
+      min-height: 100vh; /* Wajib! biar tingginya penuh layar */
       margin: 0;
       padding: 0;
+    }
+
+    .overlay {
+      background-color: rgba(0, 0, 0, 0.7);
       min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .container {
-      background-color: rgba(0, 0, 0, 0.8);
-      padding: 40px 20px;
+      padding: 30px;
       border-radius: 10px;
-      max-width: 400px;
-      margin: 100px auto;
+      box-shadow: 0 0 15px #00ff00;
       text-align: center;
-      box-shadow: 0 0 20px #00ff00;
     }
 
-    input, select, button {
-      width: 90%;
-      padding: 12px;
-      margin: 10px 0;
-      border: none;
-      border-radius: 5px;
-      background-color: #111;
-      color: #00ff00;
-      font-size: 16px;
+    h1 {
+      text-shadow: 0 0 5px #00ff00;
     }
 
-    button {
+    .btn {
+      display: block;
+      margin: 15px auto;
+      padding: 12px 20px;
       background-color: #00ff00;
       color: #000;
+      border: none;
+      border-radius: 5px;
       cursor: pointer;
       font-weight: bold;
     }
 
-    button:hover {
+    .btn:hover {
       background-color: #00cc00;
-    }
-
-    h1 {
-      margin-bottom: 20px;
-      color: #00ff00;
-      text-shadow: 0 0 10px #00ff00;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Login</h1>
-    <form>
-      <input type="text" placeholder="Username" required>
-      <input type="password" placeholder="Password" required>
-      <button type="submit">LOGIN</button>
-    </form>
+  <div class="overlay">
+    <div class="container">
+      <h1>⚡ Shadow Crasher ⚡</h1>
+      <button class="btn">Ultimate Crash</button>
+      <button class="btn">Crash Invisible</button>
+      <button class="btn">Hard Delay Invisible</button>
+      <button class="btn">iOS Crash (Exp)</button>
+      <button class="btn">Android UI Killer</button>
+    </div>
   </div>
 </body>
 </html>
