fix web dark mode kaneshiro

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
       background-color: #000;
       color: #00ff00;
       font-family: 'Courier New', monospace;
-      background-image: url('https://files.catbox.moe/6c41es.jpg'); /* Gambar Kaneshiro */
-      background-size: cover; /* Full layar */
+      background-image: url('https://files.catbox.moe/6c41es.jpg');
+      background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
       background-attachment: fixed;
-      min-height: 100vh; /* Biar tinggi penuh layar */
+      min-height: 100vh;
       margin: 0;
       padding: 0;
     }
