--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       border-radius: 5px;
       cursor: pointer;
       font-weight: bold;
+      margin-top: 10px;
     }
 
     button:hover {
@@ -70,12 +71,16 @@
   <div class="container" id="toolsContainer" style="display: none;">
     <h1>⚡ Shadow Crasher ⚡</h1>
     <p><strong>Nomer target :</strong></p>
-    <button class="btn">Ultimate Crash</button>
-    <button class="btn">Crash Invisible</button>
-    <button class="btn">Hard Delay Invisible</button>
-    <button class="btn">iOS Crash (Exp)</button>
-    <button class="btn">Android UI Killer</button>
+    <input type="text" id="targetNumber" placeholder="Contoh: 6281234567890">
+    <button class="btn" onclick="attack('Ultimate Crash')">Ultimate Crash</button>
+    <button class="btn" onclick="attack('Crash Invisible')">Crash Invisible</button>
+    <button class="btn" onclick="attack('Hard Delay Invisible')">Hard Delay Invisible</button>
+    <button class="btn" onclick="attack('iOS Crash (Exp)')">iOS Crash (Exp)</button>
+    <button class="btn" onclick="attack('Android UI Killer')">Android UI Killer</button>
   </div>
+
+  <!-- Sound efek HAKI dari kamu -->
+  <audio id="effectSound" src="https://files.catbox.moe/ophu1v.m4a"></audio>
 
   <script>
     function checkLogin() {
@@ -87,6 +92,16 @@
         document.getElementById('toolsContainer').style.display = 'block';
       } else {
         alert('Username atau Password salah!');
+      }
+    }
+
+    function attack(action) {
+      const target = document.getElementById('targetNumber').value;
+      if (target.trim() === '') {
+        alert('Isi nomor target dulu!');
+      } else {
+        alert(`Menyerang nomor: ${target}\nMenggunakan: ${action}`);
+        document.getElementById('effectSound').play();
       }
     }
   </script>
